# fan_characterisation

./: README.md  fan_characterisation.py  setup.cfg
