[metadata]
name = fan_characterisation
version = 0.0.1
description = Measure a PWM fan's rotation frequency (RPM) as a function of PWM duty cycle 
url = https://github.com/pypa/sampleproject
project_urls =
    Source = https://github.com/ari-s/fan_characterisation
    Bug Tracker = https://github.com/ari-s/fan_characterisation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Artistic License
    Operating System :: POSIX :: Linux
    Development Status :: 4 - Beta
    Topic :: System :: Hardware

[options]
python_requires = >=3.9
py_modules =
    fan_characterisation
install_requires =
    python-periphery
    typed-argument-parser
